# aberredengine

./: .gitignore  Cargo.toml  README.md  RUST-GAME-GUIDE.md  WINDOWS.md  aberred.rc  build.rs  config.ini  fix-raylib-stdc.ps1  llm-context.md
assets/audio/: axel_-_christmas_delirium.mod  boss_fight.xm  journey_begins.xm  success.xm  woffy_-_arkanoid_cover.xm
assets/audio/arkanoid/: player_ready.xm
assets/levels/: level01.json
assets/levels/arkanoid/: level01.json
assets/scripts/: .luarc.json  README.md  engine.lua  main.lua  setup.lua
assets/scripts/lib/: math.lua  utils.lua
assets/scripts/scenes/: gui_demo.lua  level01.lua  menu.lua
assets/shaders/: blink.fs  bloom.fs  crt.fs  crt2.fs  fade.fs  invert.fs  outline.fs  parallax_scroll.fs  wave.fs
assets/tilemaps/level01/: level01.txt
assets/tilemaps/maptest04/: maptest04.txt
assets/tilemaps/sidescroller_test01/: sidescroller01_assets.map  sidescroller_test01.txt
docs/: gui-system-architecture.md  lua-interface-architecture.md  plan-multi-pass-post-process-shaders.md  plan-post-process-shaders.md  raylib-sys-stdc-windows.md
src/: engine_app.rs  game.rs  lib.rs  lua_plugin.rs  luarc_generator.rs  main.rs  stub_generator.rs  tracy.rs
src/components/: animation.rs  boxcollider.rs  cameratarget.rs  collision.rs  dynamictext.rs  emittedparticle.rs  entityshader.rs  globaltransform2d.rs  gridlayout.rs  group.rs  gui_themed.rs  guibutton.rs  guiimage.rs  guiinteractable.rs  guilabel.rs  guioffset.rs  guiprogressbar.rs  guiwindow.rs  inputcontrolled.rs  lua_on_animation_end.rs  lua_on_tween_finished.rs  luacollision.rs  luaphase.rs  luasetup.rs  luatimer.rs  mapposition.rs  menu.rs  mod.rs  particleemitter.rs  persistent.rs  phase.rs  position2d.rs  rigidbody.rs  rotation.rs  scale.rs  screenposition.rs  shadow.rs  signalbinding.rs  signals.rs  sprite.rs  (+7 more)
src/events/: animation.rs  audio.rs  collision.rs  gamestate.rs  gui_button.rs  gui_interactable.rs  input.rs  luatimer.rs  menu.rs  mod.rs  phase.rs  render_assets.rs  spawnmap.rs  switchdebug.rs  switchfullscreen.rs  timer.rs  tween.rs
src/resources/: animationstore.rs  appstate.rs  audio.rs  camera2d.rs  camerafollowconfig.rs  debugmode.rs  debugoverlayconfig.rs  drawable_snapshot.rs  fontmetrics.rs  fontstore.rs  fullscreen.rs  gameconfig.rs  gamestate.rs  group.rs  guiinputstate.rs  guitheme.rs  imgui_bridge.rs  input.rs  input_bindings.rs  lua_runtime.rs  mapdata.rs  mod.rs  postprocessshader.rs  rawinput.rs  rendertarget.rs  scenemanager.rs  screensize.rs  shaderstore.rs  signal_keys.rs  systemsstore.rs  texturefilter.rs  texturestore.rs  tilemap.rs  tilemapstore.rs  uniformvalue.rs  warn_once.rs  windowsize.rs  worldsignals.rs  worldtime.rs
src/resources/lua_runtime/: command_queues.rs  commands.rs  context.rs  engine_api.rs  entity_builder.rs  input_snapshot.rs  mod.rs  queue_registry.rs  runtime.rs  spawn_data.rs  (+1 more)
src/systems/: animation.rs  audio.rs  camera_follow.rs  collision.rs  collision_detector.rs  dynamictext_size.rs  game_ctx.rs  gameconfig.rs  gamestate.rs  gridlayout.rs  group.rs  gui_button_click.rs  gui_hit_test.rs  gui_image_state_sync.rs  gui_interactable_click.rs  gui_layout.rs  gui_progressbar_signal_update.rs  gui_spawn.rs  input.rs  inputaccelerationcontroller.rs  inputsimplecontroller.rs  lua_animation_finished.rs  lua_collision.rs  lua_commands.rs  lua_setup_entity.rs  lua_tween_finished.rs  luaphase.rs  luatimer.rs  mapspawn.rs  menu.rs  mod.rs  mousecontroller.rs  movement.rs  particleemitter.rs  phase.rs  phase_core.rs  propagate_transforms.rs  render.rs  render_assets.rs  rust_collision.rs  (+10 more)
tests/: bevy_ecs_integration.rs  camera_follow_integration.rs  engine_tick_integration.rs  gui_layout_integration.rs  hierarchy_integration.rs  input_bindings_integration.rs  menu_callback_integration.rs  scene_manager_integration.rs  stub_generator_integration.rs
(+40 files in other folders)
