[package]
name = "aberredengine"
version = "0.1.0"
edition = "2024"

[dependencies]
# bevy_ecs = { version = "0.18", features = ["debug"] }
bevy_ecs = { version = "0.18" }
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
mlua = { version = "0.11", features = ["vendored", "luajit", "serialize"], optional = true }
arrayvec = "0.7"
smallvec = "1.15"
configparser = "3"
fastrand = "2.3"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
imgui = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
raylib = { version = "5.5.1", features = ["wayland","noscreenshot","imgui"] }

[target.'cfg(target_os = "windows")'.dependencies]
raylib = { version = "5.5.1", features = ["noscreenshot","imgui"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

# Optimized build for this computer:
# RUSTFLAGS="-C target-cpu=native" cargo build --release
# Build without Lua support:
# cargo build --no-default-features

[features]
default = ["lua"]
lua = ["dep:mlua"]
